@@ -3,9 +3,7 @@ package com.bsu.cvbuilder.service.impl;
 import com.bsu.cvbuilder.domain.entity.image.ImageMetadata;
 import com.bsu.cvbuilder.exception.AppException;
 import com.bsu.cvbuilder.repository.ImageMetadataRepository;
-import com.bsu.cvbuilder.repository.UserProfileRepository;
 import com.bsu.cvbuilder.service.ImageService;
-import com.bsu.cvbuilder.service.UserProfileService;
 import com.mongodb.client.gridfs.model.GridFSFile;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,7 +20,6 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -51,7 +48,7 @@ public class ImageServiceImpl implements ImageService {
 
         List<ObjectId> ids = metadataList.stream()
                 .map(meta -> new ObjectId(meta.getId()))
-                .collect(Collectors.toList());
+                .toList();
 
         List<GridFSFile> files = new ArrayList<>();
         gridFsTemplate.find(Query.query(Criteria.where("_id").in(ids))).into(files);
@@ -64,15 +61,12 @@ public class ImageServiceImpl implements ImageService {
     public byte[] findById(final String id) {
         log.debug("Downloading image: {}", id);
 
-        // 1. Используем ofNullable, чтобы не упасть на null
-        GridFSFile gridFsFile = Optional.ofNullable(
+        GridFSFile gridFsFile = Optional.of(
                 gridFsTemplate.findOne(Query.query(Criteria.where("_id").is(id)))
         ).orElseThrow(() -> new AppException("Image not found: " + id, 404));
 
-        // 2. Получаем ресурс
         GridFsResource resource = gridFsTemplate.getResource(gridFsFile);
 
-        // 3. Проверяем, существует ли физический контент (ресурс)
         if (!resource.exists()) {
             log.error("GridFS file metadata exists but content is missing for id: {}", id);
             throw new AppException("Image content not found", 404);
